--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ test = [
     "pytest",
     "pytest-cov",
 ]
+pydantic = [
+  "pydantic>=2.0",
+]
+
 
 classifiers = [
     "Programming Language :: Python",
