--- a/.github/workflows/ci-coverage.yaml
+++ b/.github/workflows/ci-coverage.yaml
@@ -25,11 +25,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
-          pip install .  # instala o pacote local (brazilian)
+          pip install .
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=. --cov-report=xml
+          pytest tests/ --cov=src/brazilian --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
