--- a/.github/workflows/ci-coverage.yaml
+++ b/.github/workflows/ci-coverage.yaml
@@ -24,12 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-          pip install .
+          pip install ".[pydantic]"  # instala a lib local
+          pip install pytest pytest-cov requests
 
       - name: Run tests with coverage
-        run: |
-          pytest tests/ --cov=src/brazilian --cov-report=xml
+        run: pytest tests/ --cov=brazilian --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
