--- a/.github/workflows/ci-run-tests.yaml
+++ b/.github/workflows/ci-run-tests.yaml
@@ -26,8 +26,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
-          pip install .
+          pip install ".[pydantic]"
+          pip install pytest pytest-cov requests
 
       - name: Run tests
         run: pytest tests/
