--- a/.github/workflows/ci-backward-compatibility.yaml
+++ b/.github/workflows/ci-backward-compatibility.yaml
@@ -31,9 +31,9 @@ jobs:
       - name: Install brazilian (${{ matrix.brazilian-version }})
         run: |
           if [ "${{ matrix.brazilian-version }}" = "local" ]; then
-            pip install ".[pydantic]"
+            pip install '.[pydantic]'
           else
-            pip install "brazilian==${{ matrix.brazilian-version }}[pydantic]"
+            pip install 'brazilian==${{ matrix.brazilian-version }}[pydantic]'
           fi
 
       - name: Install test dependencies
