--- a/.github/workflows/ci-backward-compatibility.yaml
+++ b/.github/workflows/ci-backward-compatibility.yaml
@@ -33,9 +33,8 @@ jobs:
           if [ "${{ matrix.brazilian-version }}" = "local" ]; then
             pip install ".[pydantic]"
           else
-            pip install "brazilian==${{ matrix.brazilian-version }}\[pydantic\]"
+            pip install "brazilian==${{ matrix.brazilian-version }}[pydantic]"
           fi
-
 
       - name: Install test dependencies
         run: pip install pytest pytest-cov requests
