--- a/.github/workflows/ci-coverage.yaml
+++ b/.github/workflows/ci-coverage.yaml
@@ -1,4 +1,4 @@
-name: CI + Coverage
+name: Python CI + Coverage
 
 on:
   push:
@@ -9,29 +9,34 @@ on:
       - main
 
 jobs:
-  tests:
+  build-and-test:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    strategy:
+      matrix:
+        python-version: [3.11]
 
-      - name: Setup Python
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ".[pydantic]"  # instala a lib local
-          pip install pytest pytest-cov requests
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
 
       - name: Run tests with coverage
-        run: pytest tests/ --cov=brazilian --cov-report=xml
+        run: |
+          pytest --cov=src --cov-report=xml
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5
+        uses: codecov/codecov-action@v4
         with:
           files: coverage.xml
           fail_ci_if_error: true
