--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ authors = [
 requires-python = ">=3.9"
 
 dependencies = [
-  
+  "requests"
 ]
 classifiers = [
   "Programming Language :: Python :: 3",
