--- a/.github/workflows/ci-coverage.yaml
+++ b/.github/workflows/ci-coverage.yaml
@@ -28,9 +28,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[pydantic]      # se você tiver extras opcionais
-          pip install pytest pytest-cov
-
+          pip install .[pydantic]      
+          pip install pytest pytest-cov requests
+          
       - name: Run tests with coverage
         run: |
           pytest --cov=src --cov-report=xml
@@ -41,3 +41,5 @@ jobs:
           files: coverage.xml
           fail_ci_if_error: true
           verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
