--- a/.github/workflows/ci-backward-compatibility.yaml
+++ b/.github/workflows/ci-backward-compatibility.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
-        brazilian-version: ["1.0.0", "1.0.1"]
+        brazilian-version: ["1.0.0", "1.0.1", "1.0.2", "1.0.3"]
 
     steps:
       - name: Checkout
