--- a/.github/workflows/ci-run-tests.yaml
+++ b/.github/workflows/ci-run-tests.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ".[pydantic]"
+          pip install ".[all]"
           pip install pytest pytest-cov requests
 
       - name: Run tests
