test: adding importerror tests on SQLAlchemy

--- a/.github/workflows/ci-coverage.yaml
+++ b/.github/workflows/ci-coverage.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install .[all]
-          python -m pip install pytest pytest-cov
+          python -m pip install pytest pytest-cov importlib
 
 
       - name: Run tests with coverage
