--- a/.github/workflows/ci-backward-compatibility.yaml
+++ b/.github/workflows/ci-backward-compatibility.yaml
@@ -29,7 +29,7 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install test dependencies
-        run: pip install pytest pytest-cov requests
+        run: pip install pytest pytest-cov requests importlib
 
       - name: Install brazilian (${{ matrix.brazilian-version }})
         run: |
