--- a/.github/workflows/ci-run-tests.yaml
+++ b/.github/workflows/ci-run-tests.yaml
@@ -27,7 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ".[all]"
-          pip install pytest pytest-cov requests
+          pip install pytest pytest-cov requests importlib
 
       - name: Run tests
         run: pytest tests/
